test/conformance/chainsaw/validating-policies/exceptions/restrict-seccomp/exceptions.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: image-based-exceptions
spec:
  policyRefs:
    - name: restrict-seccomp-strict
      kind: ValidatingPolicy
  # list of image names to exclude
  images:
  - busybox:latest
  - nginx:latest
