test/conformance/chainsaw/validating-policies/exceptions/restrict-seccomp/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-1
spec:
  containers:
  - name: container01
    image: ubuntu:latest
    securityContext:
      seccompProfile:
        type: RuntimeDefault
  - name: container02
    image: busybox:latest
    securityContext:
      seccompProfile:
        type: Unconfined
