test/conformance/chainsaw/validating-policies/exceptions/restrict-seccomp/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: "restrict-seccomp-strict"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
      # The expression is true:
      # if allowPrivilegeEscalation is explicitly set to false.
      # if not, it passes if the container’s image is in the exceptions.AllowedImages list, 
      # or if the container has a seccomp profile type set to either RuntimeDefault or Localhost.
    - expression: >
        object.spec.containers.all(container,
          (
            has(container.securityContext) &&
            has(container.securityContext.allowPrivilegeEscalation) &&
            container.securityContext.allowPrivilegeEscalation == false
          ) ||
          string(container.image) in exceptions.AllowedImages ||
          (
            has(container.securityContext) &&
            has(container.securityContext.seccompProfile) &&
            has(container.securityContext.seccompProfile.type) &&
            (container.securityContext.seccompProfile.type == 'RuntimeDefault' ||
            container.securityContext.seccompProfile.type == 'Localhost')
          )
        )
      message: >-
        Use of custom Seccomp profiles is disallowed. The field seccompProfile.type must be set to `RuntimeDefault` or `Localhost`.
